srs crs wkt definition extension updates